Change all px to rem, fix alignment issues

--- a/pages/cart.module.scss
+++ b/pages/cart.module.scss
@@ -3,8 +3,8 @@
 
   .cartitems {
     width: 50%;
-    border: 1px solid #9CA3AF;
-    border-radius: 4px;
+    border: 0.1rem solid #9CA3AF;
+    border-radius: 0.4rem;
     margin-bottom: 2rem;
     position: relative;
 
@@ -19,7 +19,7 @@
       width: 10rem;
       object-fit: cover;
       object-position: center center;
-      border-radius: 4px;
+      border-radius: 0.4rem;
     }
 
     .item>div {
@@ -87,17 +87,17 @@
 
       .btns>p {
         color: #DA4065;
-        border-bottom: 1px solid #DA4065;
+        border-bottom: 0.1rem solid #DA4065;
         cursor: pointer;
 
       }
 
       .btns>button>label {
-        border-bottom: 1px solid #202020;
+        border-bottom: 0.1rem solid #202020;
       }
 
       .btns>button>.hide {
-        border-bottom: 1px solid #B240DA;
+        border-bottom: 0.1rem solid #B240DA;
       }
 
       @media (max-width: 420px) {
@@ -118,7 +118,7 @@
 
     .details {
       width: 100%;
-      border-top: 1px solid #9CA3AF;
+      border-top: 0.1rem solid #9CA3AF;
       height: 0;
       overflow: hidden;
       z-index: -1;
@@ -135,7 +135,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 2px 0;
+      padding: 0.2rem 0;
     }
 
     .details>div>p:nth-child(2) {
@@ -181,7 +181,7 @@
         width: 8rem;
         object-fit: cover;
         object-position: center center;
-        border-radius: 4px;
+        border-radius: 0.4rem;
       }
     }
 
@@ -191,17 +191,17 @@
 
         p:first-of-type {
           color: #DA4065;
-          border-bottom: 1px solid #DA4065;
+          border-bottom: 0.1rem solid #DA4065;
           cursor: pointer;
 
         }
 
         button>label {
-          border-bottom: 1px solid #202020;
+          border-bottom: 0.1rem solid #202020;
         }
 
         button>.hide {
-          border-bottom: 1px solid #B240DA;
+          border-bottom: 0.1rem solid #B240DA;
         }
       }
     }
@@ -215,12 +215,12 @@
 
   .summary {
     width: 40%;
-    border: 1px solid #9CA3AF;
+    border: 0.1rem solid #9CA3AF;
     padding: 1rem;
     position: fixed;
     top: 15.8rem;
     left: 55%;
-    border-radius: 4px;
+    border-radius: 0.4rem;
 
     .divider {
       @media (max-width: 420px) {
@@ -233,6 +233,18 @@
       width: auto;
       margin-bottom: 3rem;
     }
+  }
+
+  .empty{
+  width:25%;
+  margin: 0 auto;
+
+  &>*{
+    margin-top: 2.5rem;
+  }
+  @media (max-width: 500px) {
+      width:60%;
+  }
   }
 
   .summary>* {
