--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -27,7 +27,7 @@
         left:5rem;
         top:3.5rem;
         padding: 2rem;
-        border-radius: 8px;
+        border-radius: 0.8rem;
         opacity: 0.9;
         
         p:first-of-type {
@@ -62,12 +62,12 @@
           background-color: white;
           margin: auto;
           padding: 1rem;
-          border-radius: 8px;
+          border-radius: 0.8rem;
 
           p:last-of-type{
             margin-top: 1rem;
             width:10rem;
-            border-bottom: 1px solid ;
+            border-bottom: 0.1rem solid ;
           }
         }
       }
@@ -231,7 +231,7 @@
 
   h3 {
     font-size: 1.3rem;
-    border-bottom: 1px solid;
+    border-bottom: 0.1rem solid;
     margin-right: 1rem;
   }
   
@@ -346,9 +346,9 @@
 }
 
 .search-wrapper {
-  width: 96%;
-    border: 1px solid #DADADA;
-    border-radius: 4px;
+    width: 100%;
+    border: 0.1rem solid #DADADA;
+    border-radius: 0.4rem;
   @media (max-width: 650px) {
     width: 50%;
   }
